<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/return_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/return_to_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speaking_speed_is"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speaking_speed_is"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/star_speaking_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/speaking_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speaking_interval_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speaking_interval_is"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/star_speaking_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/speaking_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mean_less_words_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean_less_words_is"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/star_mean_less_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/mean_less_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/volume_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_is"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/star_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accents_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accents_is"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/star_accent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/accent"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_weight="0"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_is"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/star_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/return_to_start"
        android:layout_width="227dp"
        android:layout_height="66dp"
        android:layout_marginTop="1dp"
        android:background="@color/purple_500"
        android:text="@string/button_return_to_start"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>